--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,22 @@
+
+body {
+  background: #282c34;
+}
+
 .App {
   text-align: center;
+  text-align: center;
+  margin-top: 141px;
 }
 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
+}
+
+
+h1 {
+  color: #d6a6c3;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -35,4 +47,30 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+body, .fotos {
+  background-color: #030303;
+}
+
+.fotos img {
+  width: 55%
+}
+
+.fotos span {
+  font-size: 70px;
+  position: absolute;
+  margin-top: 400px;
+  text-align: center;
+  color: #db658c;
+  width: 26%;
+  left: 582px;
+}
+
+.fotos span:nth-child(1) {
+  
+  margin-top: 122px;
+  text-align: center;
+  color: #755fcd;
+  
 }
