--- a/src/App.css
+++ b/src/App.css
@@ -53,24 +53,32 @@ body, .fotos {
   background-color: #030303;
 }
 
+
+.fotos {
+  position: relative;
+  width: 55%;
+  max-width: 500px; /* Asegura que las imágenes no excedan los 500px */
+  margin: 0 auto; /* Centra el contenedor en la pantalla */
+}
+
 .fotos img {
-  width: 55%
+  width: 100%; /* La imagen ocupa el 55% del ancho de la pantalla */
+  height: auto; /* Mantiene la proporción de la imagen */
 }
 
 .fotos span {
-  font-size: 70px;
   position: absolute;
-  margin-top: 400px;
-  text-align: center;
+  top: 50%; /* Centra verticalmente el texto */
+  left: 50%; /* Centra horizontalmente el texto */
+  transform: translate(-50%, -50%); /* Ajusta el texto para que quede centrado */
   color: #db658c;
-  width: 26%;
-  left: 582px;
+  text-align: center;
+  font-size: calc(12px + 2vw); /* Ajusta dinámicamente el tamaño del texto según el ancho de la pantalla */
+  max-width: 100%; /* Asegura que el texto no exceda el ancho de la imagen */
+  word-wrap: break-word; /* Permite que el texto se ajuste dentro del contenedor */
 }
 
 .fotos span:nth-child(1) {
-  
-  margin-top: 122px;
-  text-align: center;
   color: #755fcd;
-  
 }
+
